apps/production/liftlog/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: liftlog-server
  namespace: liftlog
spec:
  selector:
    app: liftlog-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
